1998-12-21  Harri Porten  <porten@kde.org>

	* opener.h: define system dependend type cast for struct iovec's
	iov_base. FreeBSD needs (char *) instead (void *).

1998-12-20  Mario Weilguni <mweilguni@kde.org>

	* added Germany Mannesmann Arcor ruleset

1998-12-20  Harri Porten  <porten@kde.org>

	* docking.cpp: call KWM::activate() on connection window after
	being re-opened from docking icon (recommended by Matthias on
	kde-devel)
	* ppplog.cpp: re-introduced reading messages with fgets() instead
	of single chars. Should be faster.
	* ppplog.cpp: worked on diagnostic messages

1998-12-18  Harri Porten  <porten@kde.org>

	* #include "auth.h" was needed after pap.h was removed
	* opener.h: workaround for glibc bug in RedHat 5.0. Since there is
	presumably no way to detect the exact release version we'll simply
	define SCM_RIGHTS to be 1 for every glibc2.0 on Linux. This should
	solve the conflict with the kernel.  

1998-12-18  Harri Porten  <porten@kde.org>

	* removed pap.* and chap.* files and moved their code in
	requester.cpp where all setuid root stuff is gathered now.
	* requester.cpp: rewrote PAP/CHAP so that the setuid part is free
	of any Qt/X calls. 

>>>>>>> 1.155
1998-12-16  Mario Weilguni <mweilguni@kde.org>

	* added Indonesia rule files
	* added some new Denmark rule files
	* added a patch from Filip Larsen <filip@post4.tele.dk> to allow a
	  rule to be dependent on connection time. See Rules/TEMPLATE for
	  an example. This will allow much better danish rulesets

1998-12-14  Harri Porten  <porten@kde.org>

	* runtests.cpp: fixed test for pppd's suid bit
	* requester.cpp: initialize struct control (may be necessary for
	some kernel versions)
	* runtests.cpp: use Requester to check write access to modem (PPP Test)

1998-12-13  Harri Porten  <porten@kde.org>

	* use hardcoded lock file path (kpppconfig.h)
	* tighten interface between Requester/Opener by transmitting
	device index instead of device path 
	* do a fchown(fd, 0, 0) on lock file
